# AstraX-Browser

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  resources.qrc  resources.rc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  ROADMAP.md
scripts/: build-vs2022.bat  deploy-release.bat  package-release.bat  run-release.bat
src/: main.cpp
src/core/: RequestBlocker.cpp  RequestBlocker.h  UrlTools.cpp  UrlTools.h
src/engine/: CssParser.cpp  CssParser.h  HtmlParser.cpp  HtmlParser.h  LayoutEngine.cpp  LayoutEngine.h
src/storage/: BookmarksStore.cpp  BookmarksStore.h  HistoryStore.cpp  HistoryStore.h  SessionStore.cpp  SessionStore.h  SettingsStore.cpp  SettingsStore.h
src/ui/: BrowserView.cpp  BrowserView.h  BrowserWindow.cpp  BrowserWindow.h  EngineLabWindow.cpp  EngineLabWindow.h
tests/: CoreStorageTests.cpp
